--- a/config/boards/shields/dac_man_5x6/dac_man_5x6.dtsi
+++ b/config/boards/shields/dac_man_5x6/dac_man_5x6.dtsi
@@ -24,7 +24,7 @@ RC(3,0) RC(3,1) RC(3,2) RC(3,3) RC(3,4) RC(3,5)                   RC(3,11) RC(3,
     };
 
 // Travis added A 1 row below, and made it the equals rather than comma. 
-
+// who is Travis? 
     kscan0: kscan {
         compatible = "zmk,kscan-gpio-matrix";
         label = "KSCAN";
