--- a/build.yaml
+++ b/build.yaml
@@ -15,7 +15,11 @@
 include:
   - board: nice_nano_v2
     shield: dac_man_5x6_left
+    snippet: studio-rpc-usb-uart
+    cmake-args: -DCONFIG_ZMK_STUDIO=y
   - board: nice_nano_v2
     shield: dac_man_5x6_right
+    snippet: studio-rpc-usb-uart
+    cmake-args: -DCONFIG_ZMK_STUDIO=y
   - board: nice_nano_v2
     shield: settings_reset
